added mobile responsiveness

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="A simple app for managing your favourite recipes"
     />
+    <script
+      src="https://kit.fontawesome.com/df2d66550b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>MyRecipes</title>
   </head>
   <body>
